fix build failure for java 8 incompatibility of prev commit